feat: SJRA-146 add variant consequences endpoint (#201)
